adding user interface design

--- a/musrenbang-desktop/nbproject/project.properties
+++ b/musrenbang-desktop/nbproject/project.properties
@@ -30,7 +30,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.toplink.classpath}:\
     ${libs.spring-framework.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.SwingX.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
