--- a/trunk/musrenbang-desktop/nbproject/project.properties
+++ b/trunk/musrenbang-desktop/nbproject/project.properties
@@ -1,9 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=musrenbang-desktop
+application.vendor=Hendro Steven
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,14 +24,21 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/musrenbang-desktop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.asm-3.3.1.jar=D:\\PROJECT PRIBADI\\Tri Karsa\\JAVA TRIKARSA\\asm-3.3.1.jar
+file.reference.asm-commons-3.3.1.jar=D:\\PROJECT PRIBADI\\Tri Karsa\\JAVA TRIKARSA\\asm-commons-3.3.1.jar
+file.reference.asm-util-3.3.1.jar=D:\\PROJECT PRIBADI\\Tri Karsa\\JAVA TRIKARSA\\asm-util-3.3.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.toplink.classpath}:\
     ${libs.spring-framework.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.SwingX.classpath}
+    ${libs.SwingX.classpath}:\
+    ${file.reference.asm-3.3.1.jar}:\
+    ${file.reference.asm-commons-3.3.1.jar}:\
+    ${file.reference.asm-util-3.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,7 +64,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=com.x3.musrenbang.ui.MainApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
@@ -67,7 +74,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=
+run.jvmargs=-javaagent:D:/spring-agent.jar
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
