--- a/trunk/musrenbang-desktop/nbproject/project.properties
+++ b/trunk/musrenbang-desktop/nbproject/project.properties
@@ -26,19 +26,20 @@ dist.jar=${dist.dir}/musrenbang-desktop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.asm-3.3.1.jar=D:\\PROJECT PRIBADI\\Tri Karsa\\JAVA TRIKARSA\\asm-3.3.1.jar
-file.reference.asm-commons-3.3.1.jar=D:\\PROJECT PRIBADI\\Tri Karsa\\JAVA TRIKARSA\\asm-commons-3.3.1.jar
-file.reference.asm-util-3.3.1.jar=D:\\PROJECT PRIBADI\\Tri Karsa\\JAVA TRIKARSA\\asm-util-3.3.1.jar
+file.reference.asm-3.3.1.jar=D:\\HENDRO\\lib\\asm-3.3.1.jar
+file.reference.asm-commons-3.3.1.jar=D:\\HENDRO\\lib\\asm-commons-3.3.1.jar
+file.reference.asm-util-3.3.1.jar=D:\\HENDRO\\lib\\asm-util-3.3.1.jar
+file.reference.swingx-0.9.7.jar=D:\\HENDRO\\lib\\swingx-0.9.7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.toplink.classpath}:\
     ${libs.spring-framework.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.SwingX.classpath}:\
     ${file.reference.asm-3.3.1.jar}:\
     ${file.reference.asm-commons-3.3.1.jar}:\
-    ${file.reference.asm-util-3.3.1.jar}
+    ${file.reference.asm-util-3.3.1.jar}:\
+    ${file.reference.swingx-0.9.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -67,6 +68,7 @@ javadoc.windowtitle=
 main.class=com.x3.musrenbang.ui.MainApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
@@ -74,7 +76,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=-javaagent:D:/spring-agent.jar
+run.jvmargs=-javaagent:D:/HENDRO/lib/spring-agent-2.5.6.jar
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
