--- a/trunk/wiintegra-iob/nbproject/project.properties
+++ b/trunk/wiintegra-iob/nbproject/project.properties
@@ -27,17 +27,66 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.json-simple-1.1.1.jar=D:\\HENDRO\\lib\\json-simple-1.1.1.jar
+file.reference.antlr-2.7.6.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\antlr-2.7.6.jar
+file.reference.asm-attrs.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\asm-attrs.jar
+file.reference.asm.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\asm.jar
+file.reference.cglib-2.1.3.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\cglib-2.1.3.jar
+file.reference.com-jaspersoft-ireport.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\com-jaspersoft-ireport.jar
+file.reference.commons-beanutils-1.7.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\commons-beanutils-1.7.jar
+file.reference.commons-collections-2.1.1.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\commons-collections-2.1.1.jar
+file.reference.commons-collections-2.1.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\commons-collections-2.1.jar
+file.reference.commons-digester-1.7.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\commons-digester-1.7.jar
+file.reference.commons-logging-1.1.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\commons-logging-1.1.jar
+file.reference.dom4j-1.6.1.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\dom4j-1.6.1.jar
+file.reference.ehcache-1.2.3.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\ehcache-1.2.3.jar
+file.reference.hibernate-annotations.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\hibernate-annotations.jar
+file.reference.hibernate-commons-annotations.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\hibernate-commons-annotations.jar
+file.reference.hibernate-entitymanager.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\hibernate-entitymanager.jar
+file.reference.hibernate-tools.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\hibernate-tools.jar
+file.reference.hibernate3.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\hibernate3.jar
+file.reference.itext.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\itext.jar
+file.reference.jasperreports-3.1.3.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\jasperreports-3.1.3.jar
+file.reference.jasperreports.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\jasperreports.jar
+file.reference.javassist.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\javassist.jar
+file.reference.jdbc2_0-stdext.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\jdbc2_0-stdext.jar
+file.reference.jfreechart.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\jfreechart.jar
+file.reference.json-simple-1.1.1.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\json-simple-1.1.1.jar
+file.reference.jta.jar=E:\\SOFTWARE\\PROGRAMMING\\JAVA JAR\\wintegra library\\jta.jar
 includes=**
 j2ee.compile.on.save=false
+j2ee.copy.static.files.on.save=false
 j2ee.deploy.on.save=false
 j2ee.platform=1.4
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/antlr-2.7.6.jar:${j2ee.server.home}/lib/antlr.jar:${j2ee.server.home}/lib/asm-attrs.jar:${j2ee.server.home}/lib/asm.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/cglib-2.1.3.jar:${j2ee.server.home}/lib/commons-beanutils.jar:${j2ee.server.home}/lib/commons-collections-2.1.1.jar:${j2ee.server.home}/lib/commons-digester.jar:${j2ee.server.home}/lib/commons-fileupload-1.0.jar:${j2ee.server.home}/lib/commons-logging-1.1.jar:${j2ee.server.home}/lib/commons-logging.jar:${j2ee.server.home}/lib/commons-validator.jar:${j2ee.server.home}/lib/dom4j-1.6.1.jar:${j2ee.server.home}/lib/ehcache-1.2.3.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/hibernate-annotations.jar:${j2ee.server.home}/lib/hibernate-commons-annotations.jar:${j2ee.server.home}/lib/hibernate-entitymanager.jar:${j2ee.server.home}/lib/hibernate-tools.jar:${j2ee.server.home}/lib/hibernate3.jar:${j2ee.server.home}/lib/itext-1.3.1.jar:${j2ee.server.home}/lib/jakarta-oro.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jasperreports-3.0.0.jar:${j2ee.server.home}/lib/javassist.jar:${j2ee.server.home}/lib/jdbc2_0-stdext.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/jstl.jar:${j2ee.server.home}/lib/jta.jar:${j2ee.server.home}/lib/mysql-connector-java-5.1.5-bin.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/standard.jar:${j2ee.server.home}/lib/struts.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/toplink-essentials-agent.jar:${j2ee.server.home}/lib/toplink-essentials.jar:${j2ee.server.home}/bin/tomcat-juli.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-3.7.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${libs.hibernate-support.classpath}:\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.antlr-2.7.6.jar}:\
+    ${file.reference.asm-attrs.jar}:\
+    ${file.reference.asm.jar}:\
+    ${file.reference.cglib-2.1.3.jar}:\
+    ${file.reference.com-jaspersoft-ireport.jar}:\
+    ${file.reference.commons-beanutils-1.7.jar}:\
+    ${file.reference.commons-collections-2.1.1.jar}:\
+    ${file.reference.commons-collections-2.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.ehcache-1.2.3.jar}:\
+    ${file.reference.hibernate-annotations.jar}:\
+    ${file.reference.hibernate-commons-annotations.jar}:\
+    ${file.reference.hibernate-entitymanager.jar}:\
+    ${file.reference.hibernate-tools.jar}:\
+    ${file.reference.hibernate3.jar}:\
+    ${file.reference.itext.jar}:\
+    ${file.reference.jasperreports-3.1.3.jar}:\
+    ${file.reference.jasperreports.jar}:\
+    ${file.reference.javassist.jar}:\
+    ${file.reference.jdbc2_0-stdext.jar}:\
+    ${file.reference.jfreechart.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.jta.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
